= Changelog

== master

* CHANGED: Renamed TitleHelper to HelperfulTitleHelper to prevent conflicts with other common helpers.


== Release 0.1.0

* ADDED: Imported TitleHelper from Gist.