@@ -1,0 +1,8 @@
+<% sidebar do -%>
+<div id="first">
+  <p>First Sidebar</p>
+</div>
+<div id="second">
+  <p>Second Sidebar</p>
+</div>
+<% end %>
