@@ -1,0 +1,2 @@
+<title>This is the title</title>
+<%= yield :sidebar %>
